chore: Fix logic inconsistencies among User/ Listing classs and services